fixed main divs overlapping

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,8 +19,10 @@
 .App-header {
   background-color: #7F5539;
   height: 100%;
-  width: 55%;
+  width: 50%;
   position:fixed;
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
