--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -2,8 +2,10 @@
     background-color: #ddb892;
     width: 40%;
     height: 100%;
+    margin: 0;
+    padding: 0;
     position: fixed; /* Use fixed positioning */
-    right: 100px;
+    right: 10%;
     z-index: 2;
 }
 
@@ -105,7 +107,7 @@
 }
 
 #resumeIcon {
-    position: absolute;
+    position: relative;
     width: 200px;
     height: 200px;
     display: flex;
@@ -137,9 +139,9 @@
     margin-left:100px;
     color: #ddb892; /* Match the theme color */
     text-decoration: none;
-    font-size: 16px;
+    font-size: 18px;
     padding: 0px 8px;
-    border: 2px solid #ddb892; /* Match the theme color */
+    border: 3px solid #ddb892; /* Match the theme color */
     border-radius: 8px;
     transition: background-color 0.3s, color 0.3s, border-color 0.3s;
     cursor: pointer;
