--- a/src/components/NavBar/Navbar.scss
+++ b/src/components/NavBar/Navbar.scss
@@ -11,7 +11,9 @@
 .navbar-container{
 	background: #7F5539;
 	height: 100%;
-	width: 100px;
+	width: 10%;
+	margin: 0;
+  	padding: 0;
 	position:fixed;
 	right:0px;
 	z-index: 4;
