--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -3,6 +3,11 @@
 	font-family: 'itim';
 }
 
+#about-body{
+	padding:100px;
+	margin-top:100px;
+}
+
 h2 {
 	font-size: 30px;
 }
