--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -1,3 +1,91 @@
-#contact-container{
-	color:#ddb892;
+#contact-container {
+	color: #ddb892;
+	font-family: 'itim';
+	height: 100vh;
+	width: 100vh;
 }
+
+.contactForm {
+	padding:100px;
+	margin-bottom: 40px;
+	margin-top: 150px; /* Adjust the top margin to push the form above the map */
+
+	form {
+	ul {
+		list-style: none;
+		padding: 0;
+
+		li {
+		margin-bottom: 20px;
+		clear:both;
+		// overflow: hidden;
+
+		input[type='text'],
+		input[type='email'],
+		input[type='submit'] {
+			width: 100%;
+			padding: 10px;
+			border: 2px solid #ddb892;
+			border-radius: 8px;
+			font-family: 'itim';
+			font-size: 1rem;
+			color: #ddb892;
+			background-color: transparent;
+			&::placeholder {
+			color: #ddb892; /* Light brown color */
+			}
+		}
+
+		input[type='submit'] {
+			cursor: pointer;
+			transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+			background-color: #ddb892; /* Match the theme color */
+			color: #fff;
+
+			&:hover {
+			background-color: #9c6644; /* Match the theme color */
+			border-color: #9c6644; /* Match the theme color */
+			}
+		}
+
+		textarea {
+			width: 100%;
+			padding: 10px;
+			border: 2px solid #ddb892;
+			border-radius: 8px;
+			font-family: 'itim';
+			font-size: 1rem;
+			color: #ddb892;
+			background-color: transparent;
+			resize: vertical;
+			&::placeholder {
+			color: #ddb892; /* Light brown color */
+			}
+		}
+		}
+		li.half{
+			width:49%;
+			margin-left: 2%;
+			float:left;
+			clear:none;
+
+			&:first-child{
+				margin-left:0px;
+			}
+		}
+	}
+	}
+}
+
+  
+  
+  #map {
+	position: absolute;
+	left: -4px; /* Adjust the left offset as needed */
+	right: 0;
+	bottom: 30px;
+	width: 100%; /* Adjust the width to account for the left offset */
+	height: 300px;
+	border-radius: 20px;
+	z-index: 1;
+  }
