--- a/src/pages/Projects/Projects.scss
+++ b/src/pages/Projects/Projects.scss
@@ -1,3 +1,6 @@
 #projects-container{
 	color:#ddb892;
+	font-family: 'itim';
+	height: 100vh;
+	width: 100vh;
 }
